# pymjdcal

./: .gitignore  README.md  pymjdcal  pyproject.toml  setup.cfg
src/pymjdcal/: __init__.py  __main__.py  pymjdcal.py
