[metadata]
name = pymjdcal
version = 0.0.1
author = Tung Thai
author_email = snowstorm2965@gmail.com
description = MJD Calender in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = julian==0.14

[options.packages.find]
where = src
